--- a/assets/scss/_galeria.scss
+++ b/assets/scss/_galeria.scss
@@ -150,4 +150,53 @@ img{
     margin-top: 10%;
     margin-bottom: 10%;
 }
+
+.galeria_carrito{            
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .contenedor{
+        position: relative;
+        display: inline-block;
+        text-align: center;
+    }
+    div{
+        box-shadow: 3px 5px 10px 3px rgba(128, 128, 128, 0.597);
+        @include sizes(360px,25%);
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+            a{
+                text-decoration: none;
+                font-size: 0.8rem;
+                color: gray;
+                bottom: 10px;
+                font-family: Arial, Helvetica, sans-serif;
+                &:hover{
+                    color: rgba(128, 128, 128, 0.597)
+                }
+            }
+            img{
+                @include sizes(68%,75%);
+                margin: 12%;
+                border-style: double;
+                color: $gris1;
+                box-shadow: 5px 8px 12px black;
+                cursor: pointer;
+                &:hover{
+                    border-style: double;
+                    color: gray;
+                    box-shadow: 18px 20px 60px black;
+                    transition: all 0.5s ease-in-out;
+                }
+            }
+            div {
+                @include sizes(8%,40%);
+            }
+            .precio{
+                color: black;
+                font-size: 0.9rem;
+                font-weight: bold;
+            }
+    }
+}
                     /*--------------------------------*/
