--- a/assets/scss/_formulario.scss
+++ b/assets/scss/_formulario.scss
@@ -61,5 +61,11 @@
         width: 40%;
     }
 }
+
+.formulario_pago{
+    margin: 5rem;
+    padding: 3rem;
+    line-height: 1em;
+}
                         /*---------------------*/
 
