--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -201,6 +201,12 @@ img {
   width: 40%;
 }
 
+.formulario_pago {
+  margin: 5rem;
+  padding: 3rem;
+  line-height: 1em;
+}
+
 /*---------------------*/
 /* Footer*/
 footer {
