--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -522,6 +522,9 @@ h2 {
   main {
     margin-top: 3rem;
   }
+  #buscador {
+    display: none;
+  }
   /*Indice y filtros*/
   .indice {
     display: grid;
@@ -626,6 +629,9 @@ h2 {
 }
 /*Responsive < 517px*/
 @media screen and (max-width: 514px) {
+  #buscador {
+    display: none;
+  }
   .galeria_ div {
     box-shadow: 3px 5px 10px black;
     height: 375px;
@@ -639,7 +645,7 @@ h2 {
   main {
     margin-top: 3rem;
   }
-  .buscador {
+  #buscador {
     display: none;
   }
   /* Galeria Principal Index*/
